had to update README!

--- a/public/index.html
+++ b/public/index.html
@@ -329,7 +329,7 @@
         <a href="#">Twitter</a>, 
         <a href="#">Instagram</a>
       </p>
-      <p>Developed by [Your Name]</p>
+      <p>Developed by Anthony Tyler Kimble</p>
     </div>
   </footer>
   
